tests/cases/ffi/errors/extern-varargs-nonextern.ari
fn log(format: ptr c_char, ...) -> i64 {
  return 0;
}
